nullaway_error_89D30A29-B333-4CAB-AD66-2591CD14D136.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-beans/src/main/java/org/springframework/beans/factory/support/DefaultSingletonBeanRegistry.java:308: error: [NullAway] enhanced-for expression this.suppressedExceptions is @Nullable
						for (Exception suppressedException : this.suppressedExceptions) {
						                                         ^
    (see http://t.uber.com/nullaway )
